# F1_bayesian

./: .gitignore  ISZ_Lukasz_Filo_Klaudiusz_Grobelski.ipynb  ISZ_Model1.ipynb  ISZ_Model2.ipynb  README.md  data_preparation.ipynb  data_prepare.ipynb  data_scraping.ipynb  pyproject.toml
HTML/: ISZ_Lukasz_Filo_Klaudiusz_Grobelski.html
data/: F1Engines2019_2024.csv  data_prepare.ipynb  data_scraping.ipynb  final_results_2019.csv  final_results_2020.csv  final_results_2021.csv  final_results_2022.csv  final_results_all.csv
data/processed_data/: data.csv  data_prepare.ipynb  f1_data_all.csv  f1_engines_all.csv  final_position.csv
data/raw_data/: F1_23_videogame_driver_ratings_initial.csv  f1_24_videogame_driver_ratings.csv  final_results_2023.csv  final_results_2024.csv
processed_data/: data.csv  f1_engines_all.csv  f1_ratings_all.csv  final_results_all.csv
src/f1_bayesian/: ISZ_Lukasz_Filo_Klaudiusz_Grobelski.ipynb  readme.md
stan/: .gitignore  model_1.stan  model_1_ppc.stan  model_2.stan  model_2_ppc.stan  model_3.stan  model_prediction.stan
