[project]
name = "f1-bayesian"
version = "0.1.0"
description = ""
authors = [
    {name = "Klaudiusz Grobelski, Åukasz Filo"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastf1 (>=3.5.3,<4.0.0)",
    "jupyter (>=1.1.1,<2.0.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
